[package]
name = "scribbles-render"
version = "0.0.1"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scribbles-render"
path = "_rendr/main.rs"

[dependencies]
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.20"
# Chosen due to mentioning source-map info availability (offsets in source text)
# and mention in comrak readme; as a bonus, authored by raphlinus.
# Could also consider e.g.: comrak, cmark-gfm, markdown-rs, ...others.
pulldown-cmark = "0.9.3"
