[package]
name = "scribbles-render"
version = "0.0.1"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scribbles-render"
path = "_rendr/main.rs"

[dependencies]
anyhow = "1.0.75"
# Used by scraper to represent HTML DOM tree.
ego-tree = "0.6.2"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.20"
# Chosen due to extensibility & mentioning source-map info availability
# (offsets in source text).
# Could also consider e.g.: comrak, cmark-gfm, markdown-rs, ...others.
# Unfortunately, pulldown-cmark does not allow extensibility.
markdown-it = "0.6.0"
markdown-it-footnote = "0.2.0"
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
peg = "0.8.1"
# HTML5 parsin and querying with CSS selectors. Should I consider `tl` instead?
scraper = "0.17.1"
thiserror = "1.0.47"
